--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0",
     "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
